save before code optimization

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div class="pending__items"></div>
     <ul class="list">
     </ul>
+    <div class="completed__tasks"></div>
+    <ul class="list__completed">
+    </ul>
 
 </div>
 
