buttons and localstorage left to do

--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         <button class="add__button">+</span>
     </div>
     <div class="pending__items"></div>
-    <ul class="list">
-    </ul>
+    <ul class="list"></ul>
     <div class="completed__tasks"></div>
-    <ul class="list__completed">
-    </ul>
+    <ul class="list__completed"></ul>
 
 </div>
 
