localstorage implementation to be done

--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
     <div class="current__date"></div>
     <div class="list__header">
         <input type="text" class="input__field" placeholder="Take the garbage out">
-        <button class="add__button">+</span>
+        <button class="add__button">+</button>
     </div>
     <div class="pending__items"></div>
     <ul class="list"></ul>
     <div class="completed__tasks"></div>
     <ul class="list__completed"></ul>
+    <div class = "buttons">
+        <button class="show__button">Show Complete</button>
+        <button class="delete__button">Clear Incomplete</button>
+        <button class="clear__button">Clear All</button>
+    </div>
+    
 
 </div>
 
