--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Todo list</title>
+    <title>Todo list project</title>
 </head>
 
 <body>
-<div class="list__container">
-    <h2>Daily To Do List</h2>
-    <div class="current__day"></div>
-    <div class="current__date"></div>
-    <div class="list__header">
-        <input type="text" class="input__field" placeholder="Take the garbage out">
-        <button class="add__button">+</button>
+    <div class="list__container">
+        <h2>Daily To Do List</h2>
+        <div class="current__day"></div>
+        <div class="current__date"></div>
+        <div class="list__header">
+            <input type="text" class="input__field" placeholder="Take the garbage out">
+            <button class="add__button">+</button>
+        </div>
+        <div class="error"></div>
+        <div class="pending__items"></div>
+        <ul class="list"></ul>
+        <div class="completed__tasks"></div>
+        <ul class="list__completed"></ul>
+        <div class="buttons">
+            <button class="show__button">Show Complete</button>
+            <button class="delete__button">Clear Incomplete</button>
+            <button class="clear__button">Clear All</button>
+        </div>
     </div>
-    <div class="pending__items"></div>
-    <ul class="list"></ul>
-    <div class="completed__tasks"></div>
-    <ul class="list__completed"></ul>
-    <div class = "buttons">
-        <button class="show__button">Show Complete</button>
-        <button class="delete__button">Clear Incomplete</button>
-        <button class="clear__button">Clear All</button>
-    </div>
-    
-
-</div>
 
     <script src="main.js"></script>
+
 </body>
 
 </html>
